--- a/.github/workflows/deploy_agent.yml
+++ b/.github/workflows/deploy_agent.yml
@@ -26,7 +26,7 @@ jobs:
 
           & $sqlPackagePath `
             /Action:Publish `
-            /SourceFile:"${{ github.workspace }}/bin/Debug/Agent.dacpac" `
+            /SourceFile:"${{ github.workspace }}/Agent/bin/Debug/Agent.dacpac" `
             /TargetConnectionString:"${{ secrets.COMPARE_AGENT_CONNECTION_STRING }}" `
             /p:BlockOnPossibleDataLoss=False `
             /p:ScriptDatabaseOptions=False `
